--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="banner">
     <div class="container">
       <h1 class="logo-font">conduit</h1>
-      <p>A place to share your <i>Angular 2</i> knowledge.</p>
+      <p>A place to share your <i>Angular</i> knowledge.</p>
     </div>
   </div>
 
@@ -15,18 +15,18 @@
           <ul class="nav nav-pills outline-active">
             <li class="nav-item">
               <a class="nav-link">
-                 Your Feed
+                Your Feed
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link">
-                 Global Feed
+                Global Feed
               </a>
             </li>
           </ul>
         </div>
 
-        
+
       </div>
 
       <div class="col-md-3">
